--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Update Data"/>
+    <Button
+        android:id="@+id/btn_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete Data"/>
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
